--- a/rafting.css
+++ b/rafting.css
@@ -25,7 +25,7 @@
 }
 
 .article img {
-    box-sizing: 1px;
+    box-sizing: 1rem;
     background-color: #606060;
     border: #d0ccd0;
     border-radius: 1px;
